# simBLEND

./: .gitignore  a_module.py  mind_datamodule.py  mind_dm_enc.py  mind_dm_vae.py  pyproject.toml  train.py  train_enc.py  train_vae.py
.mypy_cache/3.13/: zipimport.data.json  zipimport.meta.json
src/: EDA.ipynb  EDA_sentiment.ipynb  cand_generation.ipynb  cand_generation.py  classify_MFC.py  classify_sentiment.py  combine_aspect_vq.py  encode_aspect_repr.py  encode_aspect_vq.py  encode_vqvae.py  eval_aspect.py  eval_mind_recsys.py  eval_rvqvae.py  eval_seq_vqvae.py  generate_candidates.py  group_impression_by_day.ipynb  infer_sequence.py  optina_rvqvae.py  optuna_aspect.py  optuna_decoder.py  optuna_lvqvae.py  optuna_vqvae.py  output_lines.txt  post_process_final.ipynb  similarity_metrics.ipynb  test_milvus.ipynb  train_aspect_repr.py  train_lvqvae.py  train_mind_recsys.py  train_rvqvae.py  train_seq_vqvae.py
src/EDA/: aspect_embedding.ipynb  cat_aspect.ipynb  dataset.ipynb  vqvae.ipynb
src/analysis/: spherical_visual_vae.py  spherical_visual_vqvae.py  spherical_visual_vqvae_sonar.py  tsne_vae2.py
src/data_modules/: indices_data.py  mind_aspect_data.py  mind_component.py  mind_recsys_data.py  vq_vae_data.py
src/modules/: aspect_enc.py  llama_decoder.py  llama_decoder_gru.py  lstur.py  lucid_vqvae.py  res_vqvae.py
src/scripts/: classify_mfc.sh  classify_sentiment.sh  combine_aspect_vq.sh  eval_aspect_category.sh  eval_aspect_mfc.sh  eval_aspect_political.sh  eval_aspect_sentiment.sh  eval_aspect_subcategory.sh  eval_mind_recsys.sh  eval_rvqvae.sh  eval_rvqvae_cat.sh  eval_rvqvae_frame.sh  eval_rvqvae_political.sh  eval_rvqvae_sentiment.sh  eval_rvqvae_std.sh  eval_seqvqvae.sh  eval_seqvqvae_cat.sh  eval_seqvqvae_combine.sh  eval_seqvqvae_frame.sh  eval_seqvqvae_political.sh  eval_seqvqvae_sentiment.sh  eval_seqvqvae_std.sh  generate_candidates10.sh  generate_candidates25.sh  generate_candidates5.sh  infer_seq_10.sh  infer_seq_15.sh  infer_seq_25.sh  infer_seq_5.sh  optuna_aspect_cat.sh  optuna_aspect_frame.sh  optuna_aspect_frame_sts.sh  optuna_aspect_subcat.sh  optuna_decoder_std_sts.sh  optuna_lvqvae_std_sts.sh  optuna_vqvae_cat.sh  optuna_vqvae_cat_sts.sh  optuna_vqvae_frame.sh  optuna_vqvae_frame_sts.sh  optuna_vqvae_political.sh  (+52 more)
src/tests/: test_seq_vqvae.py
src/utils/: batch.py  document.py  file.py
temp/: check_milvus.py
tests/: test_encoder.py  test_lstur.py  test_mind.py  test_mind_enc.py  test_mind_recsys_datamodule.py  test_seq_vqvae.py
tests/test_dataset/: categ2index.tsv  (+2 more)
(+6 files in other folders)
