[project]
name = "SimBLEND"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub[hf-xet]>=0.30.2",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.1",
    "lightning==2.5.0",
    "matplotlib>=3.10.1",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
    "optuna-integration[pytorch-lightning]>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pymilvus>=2.5.10",
    "pytest>=8.3.5",
    "pytorch-metric-learning>=2.8.1",
    "setfit>=1.1.2",
    "setuptools>=70.2.0",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "vector-quantize-pytorch>=1.22.17",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "simblend",
]

[tool.uv.sources]
simblend = { workspace = true }
