[project]
name = "SimBLEND"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "image>=1.5.33",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.1",
    "lightning>=2.5.0",
    "matplotlib>=3.10.1",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
    "optuna-integration[pytorch-lightning]>=4.3.0",
    "pandas>=2.2.3",
    "pillow==11.1.0",
    "plotly>=6.0.1",
    "pymilvus>=2.5.10",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "pytorch-metric-learning>=2.8.1",
    "setfit>=1.1.2",
    "setuptools>=70.2.0",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchmetrics==1.7.1",
    "transformers>=4.53.0",
    "vector-quantize-pytorch>=1.22.17",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "simblend",
]

[tool.uv.sources]
simblend = { workspace = true }
